doctor module done

--- a/templates/hospital/aboutus.html
+++ b/templates/hospital/aboutus.html
@@ -11,16 +11,13 @@
       margin-top: 0px;
       margin-bottom: 0px;
     }
-
     .jumbotron h1 {
       text-align: center;
     }
-
     .alert {
       margin: 0px;
     }
   </style>
-  <title>sumit</title>
 </head>
 
 <body class="text-center">
@@ -33,7 +30,7 @@
     <h1 class="display-4">Hello everyone.</h1>
     <p class="lead">Welcome to UniHealth Admins, Doctors and Students.</p>
     <hr class="my-4">
-    <p>Explore our Website.</p>
+    <p>Explore UniHealth.</p>
     <p class="lead">
       <a class="btn btn-info btn-lg" href="/" role="button">HOME</a>
     </p>
