--- a/templates/hospital/doctor_dashboard.html
+++ b/templates/hospital/doctor_dashboard.html
@@ -12,7 +12,7 @@
       <table class="table table-hover table-striped" id="dev-table">
         <thead class="thead-dark">
           <tr>
-            <th>Patient Name</th>
+            <th>Student Name</th>
             <th>Picture</th>
             <th>Description</th>
             <th>Contact</th>
@@ -34,6 +34,4 @@
     </div>
   </div>
 </div>
-
-
 {% endblock content %}
