--- a/templates/hospital/navbar.html
+++ b/templates/hospital/navbar.html
@@ -41,15 +41,12 @@
         <div class="navbar-nav">
           <a href="/adminclick" class="nav-item nav-link">Admin</a>
           <a href="/doctorclick" class="nav-item nav-link">Doctor</a>
-          <a href="/patientclick" class="nav-item nav-link">Patient</a>
+          <a href="/patientclick" class="nav-item nav-link">Student</a>
           <a href="/aboutus" class="nav-item nav-link">About Us</a>
         </div>
       </div>
     </nav>
   </div>
-
- 
-
 </body>
 
 </html>
