--- a/templates/hospital/doctor_dashboard_cards.html
+++ b/templates/hospital/doctor_dashboard_cards.html
@@ -50,15 +50,6 @@
       -o-transition: 0.5s all;
     }
 
-    .market-update-block.clr-block-3 {
-      background: #3f51b5;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
     .market-update-block.clr-block-1:hover {
       background: #3C3C3C;
       transition: 0.5s all;
@@ -75,13 +66,6 @@
       -o-transition: 0.5s all;
     }
 
-    .market-update-block.clr-block-3:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
 
     .market-update-right i.fa.fa-user-o {
       font-size: 3em;
@@ -97,19 +81,6 @@
       line-height: 1.7em;
     }
 
-    .market-update-right i.fa.fa-check-circle-o {
-      font-size: 3em;
-      color: #FC8213;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
 
     .market-update-right i.fa.fa-calendar {
       font-size: 3em;
@@ -137,7 +108,7 @@
 
 <body>
   <div class="market-updates">
-    <div class="col-md-4 market-update-gd">
+    <div class="col-md-6 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
           <h3>{{appointmentcount}}</h3>
@@ -149,11 +120,11 @@
         <div class="clearfix"> </div>
       </div>
     </div>
-    <div class="col-md-4 market-update-gd">
+    <div class="col-md-6 market-update-gd">
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
           <h3>{{patientcount}}</h3>
-          <h4>Patient Under You</h4>
+          <h4>Students Under You</h4>
 
         </div>
         <div class="col-md-4 market-update-right">
@@ -162,18 +133,7 @@
         <div class="clearfix"> </div>
       </div>
     </div>
-    <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-3">
-        <div class="col-md-8 market-update-left">
-          <h3>{{patientdischarged}}</h3>
-          <h4>Discharged Patient</h4>
-        </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-check-circle-o" aria-hidden="true"></i>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
-    </div>
+
     <div class="clearfix"> </div>
   </div>
 </body>
