--- a/templates/hospital/doctor_patient.html
+++ b/templates/hospital/doctor_patient.html
@@ -83,7 +83,7 @@
       <div class="card bg-c-blue order-card">
         <div class="card-block">
           <a href="/doctor-view-patient">
-            <h6 class="m-b-20">Your Patient Record</h6>
+            <h6 class="m-b-20">Your Student Record</h6>
           </a>
           <br>
           <h2 class="text-right"><i class="fas fa-user-injured f-left"></i></h2>
@@ -93,7 +93,7 @@
     </div>
 
 
-    <div class="col-md-4 col-xl-6">
+    <!-- <div class="col-md-4 col-xl-6">
       <div class="card bg-c-pink order-card">
         <div class="card-block">
           <a href="/doctor-view-discharge-patient">
@@ -103,9 +103,8 @@
           <h2 class="text-right"><i class="fas fa-eject f-left"></i></h2>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
-<br><br><br><br><br><br><br>
 {% endblock content %}
