--- a/templates/hospital/doctor_view_appointment.html
+++ b/templates/hospital/doctor_view_appointment.html
@@ -30,7 +30,7 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Patient Name</th>
+          <th>Student Name</th>
           <th>Picture</th>
           <th>Description</th>
           <th>Contact</th>
