--- a/templates/hospital/patient_appointment.html
+++ b/templates/hospital/patient_appointment.html
@@ -86,6 +86,18 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4 col-xl-6">
+      <div class="card bg-c-yellow order-card">
+        <div class="card-block">
+          <a href="/patient-book-appointment">
+            <h6 class="m-b-20">Book Appointment</h6>
+          </a>
+          <br>
+          <h2 class="text-right"><i class="fas fa-calendar f-left"></i></h2>
+
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
