--- a/templates/hospital/patient_dashboard_cards.html
+++ b/templates/hospital/patient_dashboard_cards.html
@@ -31,7 +31,7 @@
     }
 
     .market-update-block.clr-block-1 {
-      background: #ff0000;
+      background: #00bfff;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
@@ -188,18 +188,6 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorAddress}}</h3>
-          <h4>Doctor Address</h4>
-        </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-map-marker"> </i>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
-    </div>
-    <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-2">
-        <div class="col-md-8 market-update-left">
           <h3>{{doctorDepartment}}</h3>
           <h4>Doctor Department</h4>
         </div>
@@ -210,10 +198,10 @@
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-3">
+      <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
           <h3>{{admitDate}}</h3>
-          <h4>Admit Date</h4>
+          <h4>Attended On</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-calendar-o" aria-hidden="true"></i>
