--- a/templates/hospital/patientclick.html
+++ b/templates/hospital/patientclick.html
@@ -12,7 +12,7 @@
   <hr class="my-4">
 
   <p class="lead">
-    <a class="btn btn-danger btn-lg" href="/patientsignup" role="button">Register Your Account</a>
+    <a class="btn btn-danger btn-lg" href="/patientsignup" role="button">Register Yourself</a>
     <a class="btn btn-success btn-lg" href="/patientlogin" role="button">Login</a>
   </p>
 </div>
