--- a/templates/hospital/patientlogin.html
+++ b/templates/hospital/patientlogin.html
@@ -14,11 +14,9 @@
       background-color: #b6bde7;
       font-family: 'Roboto', sans-serif;
     }
-
     a:link {
       text-decoration: none;
     }
-
     .note {
       text-align: center;
       height: 80px;
@@ -27,17 +25,14 @@
       font-weight: bold;
       line-height: 80px;
     }
-
     .form-content {
       padding: 5%;
       border: 1px solid #ced4da;
       margin-bottom: 2%;
     }
-
     .form-control {
       border-radius: 1.5rem;
     }
-
     .btnSubmit {
       border: none;
       border-radius: 1.5rem;
@@ -71,6 +66,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label>Username</label>
                 {% render_field form.username class="form-control" placeholder="Username" %}
               </div>
 
@@ -78,6 +74,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label>Password</label>
                 {% render_field form.password class="form-control" placeholder="Password" %}
               </div>
 
