--- a/templates/hospital/patientsignup.html
+++ b/templates/hospital/patientsignup.html
@@ -70,32 +70,41 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
+                <label for ="fname">First Name</label>
                 {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
               </div>
               <div class="form-group">
+                <label for ="UserName">UserName</label>
                 {% render_field userForm.username class="form-control" placeholder="Username" %}
               </div>
               <div class="form-group">
+                <label for ="Address">Address</label>
                 {% render_field patientForm.address class="form-control" placeholder="Address" %}
               </div>
               <div class="form-group">
+                <label for ="Symptoms">Symptoms</label>
                 {% render_field patientForm.symptoms class="form-control" placeholder="Symptoms" %}
               </div>
               <div class="form-group">
+                <label for ="Profile Picture">Profile Picture</label>
                 {% render_field patientForm.profile_pic required="required" class="form-control" placeholder="Profile Picture" %}
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
+                <label for ="lname">Last Name</label>
                 {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
               </div>
               <div class="form-group">
+                <label for ="Password">Password</label>
                 {% render_field userForm.password class="form-control" placeholder="Password" %}
               </div>
               <div class="form-group">
+                <label for ="Contact Number">Contact Number</label>
                 {% render_field patientForm.mobile class="form-control" pattern="[6789][0-9]{9}" placeholder="Contact Number" %}
               </div>
               <div class="form-group">
+                <label for ="Doctor">Doctor</label>
                 {% render_field patientForm.assignedDoctorId class="form-control" placeholder="Doctor" %}
               </div>
 
