--- a/templates/hospital/admin_view_appointment.html
+++ b/templates/hospital/admin_view_appointment.html
@@ -30,7 +30,7 @@
       <thead>
         <tr>
           <th>Doctor Name</th>
-          <th>Patient Name</th>
+          <th>Student Name</th>
           <th>Description</th>
           <th>Date</th>
         </tr>
