--- a/templates/hospital/admin_add_appointment.html
+++ b/templates/hospital/admin_add_appointment.html
@@ -59,15 +59,17 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
+              <label for="description">Description</label>
               {% render_field appointmentForm.description class="form-control" placeholder="Description" %}
             </div>
             <div class="form-group">
-              {% render_field appointmentForm.doctorId class="form-control" placeholder="doctor" %}
+              <label for="Doctor">Doctor</label>
+              {% render_field appointmentForm.doctorId class="form-control" placeholder="Doctor" %}
             </div>
             <div class="form-group">
-              {% render_field appointmentForm.patientId class="form-control" placeholder="patient" %}
+              <label for="Students">Students</label>
+              {% render_field appointmentForm.patientId class="form-control" placeholder="Student" %}
             </div>
-
           </div>
 
         </div>
