--- a/templates/hospital/admin_dashboard_cards.html
+++ b/templates/hospital/admin_dashboard_cards.html
@@ -141,7 +141,7 @@
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
           <h3>{{doctorcount}}</h3>
-          <h4>Total Doctor</h4>
+          <h4>Total <br>Doctor</h4>
           <p>Approval Required : {{pendingdoctorcount}}</p>
         </div>
         <div class="col-md-4 market-update-right">
@@ -154,8 +154,8 @@
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
           <h3>{{patientcount}}</h3>
-          <h4>Total Patient</h4>
-          <p>Wants to Admit : {{pendingpatientcount}}</p>
+          <h4>Total <br>Patient</h4>
+          <p>Patient Pending: {{pendingpatientcount}}</p>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-user-o"></i>
