--- a/templates/hospital/admin_update_doctor.html
+++ b/templates/hospital/admin_update_doctor.html
@@ -33,7 +33,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
       color: #fff;
     }
 
@@ -59,29 +59,37 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
+              <label for="fname">First Name</label>
               {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
             </div>
             <div class="form-group">
+              <label for="UserName">UserName</label>
               {% render_field userForm.username class="form-control" placeholder="Username" %}
             </div>
             <div class="form-group">
+              <label for="Contact">Contact</label>
               {% render_field doctorForm.mobile class="form-control" placeholder="Contact" %}
             </div>
             <div class="form-group">
+              <label for="Department">Department</label>
               {% render_field doctorForm.department class="form-control" placeholder="Department" %}
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
+              <label for="Lname">Last Name</label>
               {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
             </div>
             <div class="form-group">
+              <label for="Password">Password</label>
               {% render_field userForm.password class="form-control" placeholder="Password" %}
             </div>
             <div class="form-group">
+              <label for="Address">Address</label>
               {% render_field doctorForm.address class="form-control" placeholder="Address" %}
             </div>
             <div class="form-group">
+              <label for="profile_pic">Profile Picture</label>
               {% render_field doctorForm.profile_pic class="form-control" placeholder="Profile Picture" %}
             </div>
           </div>
