--- a/templates/hospital/admin_view_patient.html
+++ b/templates/hospital/admin_view_patient.html
@@ -11,11 +11,9 @@
     a:link {
       text-decoration: none;
     }
-
     h6 {
       text-align: center;
     }
-
     .row {
       margin: 100px;
     }
@@ -25,7 +23,7 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Patient</h6>
+      <h6 class="panel-title">Student</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
