--- a/templates/hospital/adminclick.html
+++ b/templates/hospital/adminclick.html
@@ -7,7 +7,7 @@
 
 <div class="jumbotron text-center" style="margin-bottom:0px;">
   <h1 class="display-4" style="text-align:center;">Hello, Admin</h1>
-  <p class="lead">Welcome to Hospital Management System.</p>
+  <p class="lead">Welcome to UniHealth.</p>
   <hr class="my-4">
  
   <p class="lead">
