--- a/templates/hospital/adminlogin.html
+++ b/templates/hospital/adminlogin.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HMS - Django</title>
+  <title>UniHealth</title>
 
 
   <style type="text/css">
@@ -44,7 +44,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
       color: #fff;
     }
   </style>
@@ -56,7 +56,6 @@
   <br>
   <br><br>
 
-  <!--- login page for admin by admin(sumit)  ---------->
   <form method="post">
     {% csrf_token %}
     <div class="container register-form">
@@ -70,6 +69,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label>Username</label>
                 {% render_field form.username class="form-control" placeholder="Username" %}
               </div>
 
@@ -77,6 +77,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label>Password</label>
                 {% render_field form.password class="form-control" placeholder="Password" %}
               </div>
 
@@ -91,9 +92,6 @@
   </form>
 
   <br><br><br>
-  
-
-  {% include "hospital/footer.html" %}
 </body>
 
 </html>
