--- a/templates/hospital/adminsignup.html
+++ b/templates/hospital/adminsignup.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HMS - Django</title>
+  <title>UniHealth</title>
   <style type="text/css">
     body {
       color: #aa082e;
@@ -43,7 +43,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
       color: #fff;
     }
   </style>
@@ -61,31 +61,34 @@
 
 
 
-  <!--- signup page for admin by admin(sumit)  ---------->
   <form method="post">
     {% csrf_token %}
     <div class="container register-form">
       <div class="form">
         <div class="note">
-          <p>Add New Admin To Hospital</p>
+          <p>Add New Admin To UniHealth</p>
         </div>
 
         <div class="form-content">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
+                <label for="fname">First Name</label>
                 {% render_field form.first_name class="form-control" placeholder="First Name" %}
               </div>
               <div class="form-group">
+                <label for="Username">Username</label>
                 {% render_field form.username class="form-control" placeholder="Username" %}
               </div>
 
             </div>
             <div class="col-md-6">
               <div class="form-group">
+                <label for="lname">Last Name</label>
                 {% render_field form.last_name class="form-control" placeholder="Last Name" %}
               </div>
               <div class="form-group">
+                <label for="Password">Password</label>
                 {% render_field form.password class="form-control" placeholder="Password" %}
               </div>
 
@@ -98,9 +101,6 @@
     </div>
 
   </form>
-
-
-  {% include "hospital/footer.html" %}
 </body>
 
 </html>
