--- a/templates/hospital/doctor_patient.html
+++ b/templates/hospital/doctor_patient.html
@@ -18,11 +18,6 @@
     a:link {
       text-decoration: none;
     }
-
-    .menu {
-      top: 50px;
-    }
-
     h6 {
       color: white;
     }
@@ -31,31 +26,15 @@
       color: #fff;
     }
 
-    .bg-c-blue {
-      background: linear-gradient(45deg, #4099ff, #73b4ff);
+    .bg-c {
+      background: rgb(101,188,101);
     }
-
-    .bg-c-green {
-      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-    }
-
-    .bg-c-yellow {
-      background: linear-gradient(45deg, #FFB64D, #ffcb80);
-    }
-
-    .bg-c-pink {
-      background: linear-gradient(45deg, #FF5370, #ff869a);
-    }
-
 
     .card {
       border-radius: 5px;
       -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
       box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
       border: none;
-      margin-bottom: 30px;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
     }
 
     .card .card-block {
@@ -80,7 +59,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-xl-6">
-      <div class="card bg-c-blue order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/doctor-view-patient">
             <h6 class="m-b-20">Your Student Record</h6>
@@ -91,19 +70,6 @@
         </div>
       </div>
     </div>
-
-
-    <!-- <div class="col-md-4 col-xl-6">
-      <div class="card bg-c-pink order-card">
-        <div class="card-block">
-          <a href="/doctor-view-discharge-patient">
-            <h6 class="m-b-20">Your Discharged Patient</h6>
-          </a>
-          <br>
-          <h2 class="text-right"><i class="fas fa-eject f-left"></i></h2>
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
 
