--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -11,6 +11,7 @@
     .jumbotron {
       margin-top: 0px;
       margin-bottom: 0px;
+      height: 62vh;
     }
 
     .jumbotron h5,
@@ -39,7 +40,6 @@
   </p>
   <br><br>
 </div>
-<br><br><br><br>
 
 {% include "hospital/admin_doctor_patient_card.html" %}
 
