--- a/templates/hospital/aboutus.html
+++ b/templates/hospital/aboutus.html
@@ -10,6 +10,7 @@
     .jumbotron {
       margin-top: 0px;
       margin-bottom: 0px;
+      height: 70vh;
     }
     .jumbotron h1 {
       text-align: center;
@@ -32,10 +33,11 @@
     <hr class="my-4">
     <p>Explore UniHealth.</p>
     <p class="lead">
-      <a class="btn btn-info btn-lg" href="/" role="button">HOME</a>
+      <a class="btn btn-success btn-lg" href="/" role="button">HOME</a>
     </p>
   </div>
 </body>
 
+{% include "hospital/admin_doctor_patient_card.html" %}
 
 </html>
