--- a/templates/hospital/admin_add_appointment.html
+++ b/templates/hospital/admin_add_appointment.html
@@ -11,7 +11,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -33,12 +33,15 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: rgb(101, 188, 101);
       color: #fff;
     }
 
     .menu {
       top: 50px;
+    }
+    .footer{
+      margin-top:15% ;
     }
   </style>
 
@@ -47,7 +50,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <br><br>
-<!------ add appointment page by admin(sumit)  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
