--- a/templates/hospital/admin_add_patient.html
+++ b/templates/hospital/admin_add_patient.html
@@ -11,7 +11,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -33,8 +33,11 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
+    }
+    .footer{
+      margin-top: 15%;
     }
 
     .menu {
