--- a/templates/hospital/admin_appointment.html
+++ b/templates/hospital/admin_appointment.html
@@ -25,20 +25,8 @@
       color: #fff;
     }
 
-    .bg-c-blue {
-      background: linear-gradient(45deg, #4099ff, #73b4ff);
-    }
-
-    .bg-c-green {
-      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-    }
-
-    .bg-c-yellow {
-      background: linear-gradient(45deg, #FFB64D, #ffcb80);
-    }
-
-    .bg-c-pink {
-      background: linear-gradient(45deg, #FF5370, #ff869a);
+    .bg-c {
+      background: rgb(101, 188, 101);
     }
 
 
@@ -48,8 +36,6 @@
       box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
       border: none;
       margin-bottom: 30px;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
     }
 
     .card .card-block {
@@ -74,7 +60,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-blue order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-view-appointment">
             <h6 class="m-b-20">View Appointment</h6>
@@ -87,7 +73,7 @@
     </div>
 
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-green order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-add-appointment">
             <h6 class="m-b-20">Book Appointment</h6>
@@ -99,7 +85,7 @@
     </div>
 
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-yellow order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-approve-appointment">
             <h6 class="m-b-20">Approve Appointment</h6>
