--- a/templates/hospital/admin_approve_appointment.html
+++ b/templates/hospital/admin_approve_appointment.html
@@ -21,11 +21,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Appointment Approvals Required</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>
+    <table class="table">
       <thead>
         <tr>
           <th>Doctor Name</th>
@@ -42,8 +43,8 @@
         <td>{{a.patientName}}</td>
         <td>{{a.description}}</td>
         <td>{{a.appointmentDate}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-appointment' a.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-appointment' a.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-primary btn-md" href="{% url 'approve-appointment' a.id  %}">Approve</a></td>
+        <td><a class="btn btn-danger btn-md" href="{% url 'reject-appointment' a.id  %}">Discard</a></td>
       </tr>
       {% endfor %}
     </table>
