--- a/templates/hospital/admin_approve_patient.html
+++ b/templates/hospital/admin_approve_patient.html
@@ -22,11 +22,11 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Student Here</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <table class="table">
       <thead>
         <tr>
           <th>Name</th>
@@ -41,12 +41,12 @@
       {% for p in patients %}
       <tr>
         <td> {{p.get_name}}</td>
-        <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="50px" width="50px" /></td>
         <td>{{p.symptoms}}</td>
         <td>{{p.mobile}}</td>
         <td>{{p.address}}</td>
-        <td><a class="btn btn-success btn-xs" href="{% url 'approve-patient' p.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-patient' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-success btn-md" href="{% url 'approve-patient' p.id  %}">Approve</a></td>
+        <td><a class="btn btn-danger btn-md" href="{% url 'reject-patient' p.id  %}">Discard</a></td>
       </tr>
       {% endfor %}
     </table>
