--- a/templates/hospital/admin_dashboard.html
+++ b/templates/hospital/admin_dashboard.html
@@ -6,12 +6,12 @@
 <br><br><br>
 <div class="container">
   <div class="row">
-    <div class="panel panel-primary col-md-5" style="margin-left:2%;">
+    <div class="panel col-md-5" style="margin-left:2%;">
       <div class="panel-heading" style="text-align:center;">
-        <h6 class="panel-title">Recent Doctors</h6>
+        <h4 >Recent Doctors</h4>
       </div>
-      <table class="table table-hover table-striped" id="dev-table">
-        <thead class="thead-dark">
+      <table class="table">
+        <thead>
           <tr>
             <th>Name</th>
             <th>Department</th>
@@ -36,12 +36,13 @@
       </table>
     </div>
 
-    <div class="panel panel-primary col-md-5" style="margin-left:5%;">
+    <div class="panel col-md-5" style="margin-left:5%;">
       <div class="panel-heading" style="text-align:center;">
         <h6 class="panel-title">Recent Patient</h6>
       </div>
-      <table class="table table-hover table-striped" id="dev-table">
-        <thead class="thead-dark">
+      <table class="table" >
+        <!-- id="dev-table" -->
+        <thead>
           <tr>
             <th>Name</th>
             <th>Symptoms</th>
@@ -60,6 +61,40 @@
         </tr>
         {% endfor %}
       </table>
+
+
+
+
+<!-- 
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table> -->
     </div>
   </div>
 </div>
