--- a/templates/hospital/admin_dashboard_cards.html
+++ b/templates/hospital/admin_dashboard_cards.html
@@ -7,126 +7,21 @@
 
   <style media="screen">
     .market-update-block {
-      padding: 2em 2em;
-      background: #999;
+      color: white;
     }
 
-    .market-update-block h3 {
-      color: #fff;
-      font-size: 2.5em;
-      font-family: 'Carrois Gothic', sans-serif;
-    }
-
-    .market-update-block h4 {
-      font-size: 1.2em;
-      color: #fff;
-      margin: 0.3em 0em;
-      font-family: 'Carrois Gothic', sans-serif;
-    }
-
-    .market-update-block p {
-      color: #fff;
-      font-size: 0.8em;
-      line-height: 1.8em;
-    }
-
-    .market-update-block.clr-block-1 {
-      background: #f44336;
+    .market-update-block.clr-block {
+      background: rgb(101, 188, 101);
       margin-right: 0.8em;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      box-shadow: 0 2px 5px 0 rgba(17, 17, 17, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
     }
 
-    .market-update-block.clr-block-2 {
-      background: #FC8213;
-      margin-right: 0.8em;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-3 {
-      background: #3f51b5;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-1:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-2:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-3:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-right i.fa.fa-user-o {
-      font-size: 3em;
-      color: #68AE00;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-
-    .market-update-right i.fa.fa-user-md {
-      font-size: 3em;
-      color: #FC8213;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-
-    .market-update-right i.fa.fa-calendar {
-      font-size: 3em;
-      color: #337AB7;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-
-    .market-update-left {
-      padding: 0px;
+    .market-update-left{
+      padding-bottom: 15px;
     }
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -136,49 +31,42 @@
 </head>
 
 <body>
-  <div class="market-updates">
+  <!-- <div class="market-updates"> -->
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-1">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{doctorcount}}</h3>
-          <h4>Total <br>Doctor</h4>
-          <p>Approval Required : {{pendingdoctorcount}}</p>
+          <h4>Total Doctor</h4>
+          Approval Required : {{pendingdoctorcount}}
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-user-md"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-2">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{patientcount}}</h3>
-          <h4>Total <br>Patient</h4>
-          <p>Patient Pending: {{pendingpatientcount}}</p>
+          <h4>Total Patient</h4>
+          Patient Pending: {{pendingpatientcount}}
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-user-o"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-3">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{appointmentcount}}</h3>
           <h4>Total Appointment</h4>
-          <p>Approve Appointments :{{pendingappointmentcount}} </p>
+          Approve Appointments :{{pendingappointmentcount}} 
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-calendar"> </i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="clearfix"> </div>
-  </div>
+  <!-- </div> -->
 </body>
-
 
 </html>
