--- a/templates/hospital/admin_patient.html
+++ b/templates/hospital/admin_patient.html
@@ -30,22 +30,9 @@
       color: #fff;
     }
 
-    .bg-c-blue {
-      background: linear-gradient(45deg, #4099ff, #73b4ff);
+    .bg-c {
+      background: rgb(101, 188, 101);
     }
-
-    .bg-c-green {
-      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-    }
-
-    .bg-c-yellow {
-      background: linear-gradient(45deg, #FFB64D, #ffcb80);
-    }
-
-    .bg-c-pink {
-      background: linear-gradient(45deg, #FF5370, #ff869a);
-    }
-
 
     .card {
       border-radius: 5px;
@@ -79,7 +66,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-blue order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-view-patient">
             <h6 class="m-b-20">Student Record</h6>
@@ -92,7 +79,7 @@
     </div>
 
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-pink order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-add-patient">
             <h6 class="m-b-20"> Add Student</h6>
@@ -105,7 +92,7 @@
     </div>
 
     <div class="col-md-4 col-xl-4">
-      <div class="card bg-c-yellow order-card">
+      <div class="card bg-c order-card">
         <div class="card-block">
           <a href="/admin-approve-patient">
             <h6 class="m-b-20">Approve Student</h6>
