--- a/templates/hospital/admin_update_doctor.html
+++ b/templates/hospital/admin_update_doctor.html
@@ -11,7 +11,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -33,7 +33,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
     }
 
@@ -47,7 +47,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <br><br>
-<!------ update page for doctor by admin(sumit)  ---------->
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container register-form">
@@ -99,6 +98,9 @@
     </div>
   </div>
 </form>
+<br>
+<br>
 
 
 {% endblock content %}
+<br><br>
