--- a/templates/hospital/admin_view_appointment.html
+++ b/templates/hospital/admin_view_appointment.html
@@ -22,11 +22,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Appointments</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>
+    <table class="table">
       <thead>
         <tr>
           <th>Doctor Name</th>
