--- a/templates/hospital/admin_view_doctor_Specialisation.html
+++ b/templates/hospital/admin_view_doctor_Specialisation.html
@@ -21,11 +21,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
-      <h6 class="panel-title">Department & Doctors</h6>
+      <h6 class="panel-title">Department</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>
+    <table class="table">
       <thead>
         <tr>
           <th>Department</th>
