--- a/templates/hospital/admin_view_patient.html
+++ b/templates/hospital/admin_view_patient.html
@@ -21,11 +21,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Student</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>  
+    <table class="table">
       <thead>
         <tr>
           <th>Name</th>
@@ -44,8 +45,8 @@
         <td>{{p.symptoms}}</td>
         <td>{{p.mobile}}</td>
         <td>{{p.address}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'update-patient' p.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-patient-from-hospital' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-primary btn-md" href="{% url 'update-patient' p.id  %}">Edit</a></td>
+        <td><a class="btn btn-danger btn-md" href="{% url 'delete-patient-from-hospital' p.id  %}">Delete</a></td>
       </tr>
       {% endfor %}
     </table>
