--- a/templates/hospital/adminsignup.html
+++ b/templates/hospital/adminsignup.html
@@ -21,7 +21,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -43,7 +43,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
     }
   </style>
