--- a/templates/hospital/doctor_appointment.html
+++ b/templates/hospital/doctor_appointment.html
@@ -14,9 +14,6 @@
     a:link {
       text-decoration: none;
     }
-    .menu{
-      top: 50px;
-    }
     h6 {
       color: white;
     }
@@ -25,22 +22,14 @@
       color: #fff;
     }
 
-    .bg-c-blue {
-      background: linear-gradient(45deg, #4099ff, #73b4ff);
+    .bg-c {
+      background: rgb(101, 188, 101)
     }
-
-    .bg-c-green {
-      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-    }
-
     .card {
       border-radius: 5px;
       -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
       box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
       border: none;
-      margin-bottom: 30px;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
     }
 
     .card .card-block {
@@ -60,12 +49,12 @@
     }
   </style>
 </head>
-
+<br>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-xl-6">
-        <div class="card bg-c-blue order-card">
+        <div class="card bg-c order-card">
           <div class="card-block">
             <a href="/doctor-view-appointment">
               <h6 class="m-b-20">View Your Appointment</h6>
@@ -78,7 +67,7 @@
       </div>
 
       <div class="col-md-4 col-xl-6">
-        <div class="card bg-c-green order-card">
+        <div class="card bg-c order-card">
           <div class="card-block">
             <a href="/doctor-delete-appointment">
               <h6 class="m-b-20">Delete Appointment</h6>
@@ -93,5 +82,4 @@
     </div>
   </div>
   
-<br><br><br><br><br><br><br>
 {% endblock content %}
