--- a/templates/hospital/doctor_dashboard.html
+++ b/templates/hospital/doctor_dashboard.html
@@ -5,12 +5,13 @@
 <br><br><br><br>
 <div class="container">
   <div class="row">
-    <div class="panel panel-primary" style="margin-left:2%;">
+    <div class="panel col-md-8">
       <div class="panel-heading" style="text-align:center;">
         <h6 class="panel-title">Recent Appointments For You</h6>
       </div>
-      <table class="table table-hover table-striped" id="dev-table">
-        <thead class="thead-dark">
+      <br>
+      <table class="table" style="width: 100%;">
+        <thead class="thead">
           <tr>
             <th>Student Name</th>
             <th>Picture</th>
