--- a/templates/hospital/doctor_delete_appointment.html
+++ b/templates/hospital/doctor_delete_appointment.html
@@ -23,11 +23,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Delete Your Appointments</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>
+    <table class="table">
       <thead>
         <tr>
           <th>Patient Name</th>
@@ -41,7 +42,7 @@
         <td>{{a.patientName}}</td>
         <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
         <td>{{a.description}}</td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-appointment' a.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-danger btn-md" href="{% url 'delete-appointment' a.id  %}">Delete</span></a></td>
       </tr>
       {% endfor %}
     </table>
