--- a/templates/hospital/doctor_view_appointment.html
+++ b/templates/hospital/doctor_view_appointment.html
@@ -23,11 +23,12 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel ">
     <div class="panel-heading">
       <h6 class="panel-title">Your Appointments</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <br>
+    <table class="table">
       <thead>
         <tr>
           <th>Student Name</th>
