--- a/templates/hospital/doctorlogin.html
+++ b/templates/hospital/doctorlogin.html
@@ -22,7 +22,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101,188,101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -44,7 +44,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background:rgb(101,188,101);
       color: #fff;
     }
   </style>
@@ -71,6 +71,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label for="username">UserName</label>
                 {% render_field form.username class="form-control" placeholder="Username" %}
               </div>
 
@@ -78,6 +79,7 @@
             <div class="col-md-6">
 
               <div class="form-group">
+                <label for="Password">Password</label>
                 {% render_field form.password class="form-control" placeholder="Password" %}
               </div>
 
