--- a/templates/hospital/patient_book_appointment.html
+++ b/templates/hospital/patient_book_appointment.html
@@ -11,7 +11,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -33,7 +33,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: rgb(101, 188, 101);
       color: #fff;
     }
 
@@ -68,9 +68,11 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
+              <label for="description">Description</label>
               {% render_field appointmentForm.description class="form-control" placeholder="Description" %}
             </div>
             <div class="form-group">
+              <label for="Doctor">Doctor</label>
               {% render_field appointmentForm.doctorId class="form-control" placeholder="doctor" %}
             </div>
             
