--- a/templates/hospital/patient_dashboard_cards.html
+++ b/templates/hospital/patient_dashboard_cards.html
@@ -6,129 +6,22 @@
   <title></title>
 
   <style media="screen">
-    .market-update-block {
-      padding: 2em 2em;
-      background: #999;
+     .market-update-block {
+      color: white;
     }
 
-    .market-update-block h3 {
-      color: #fff;
-      font-size: 1.5em;
-      font-family: 'Carrois Gothic', sans-serif;
-    }
-
-    .market-update-block h4 {
-      font-size: 1.2em;
-      color: #fff;
-      margin: 0.3em 0em;
-      font-family: 'Carrois Gothic', sans-serif;
-    }
-
-    .market-update-block p {
-      color: #fff;
-      font-size: 0.8em;
-      line-height: 1.8em;
-    }
-
-    .market-update-block.clr-block-1 {
-      background: #00bfff;
+    .market-update-block.clr-block {
+      background: rgb(101, 188, 101);
       margin-right: 0.8em;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      box-shadow: 0 2px 5px 0 rgba(17, 17, 17, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
     }
 
-    .market-update-block.clr-block-2 {
-      background: #4f5905;
-      margin-right: 0.8em;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-3 {
-      background: #1355f9;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-1:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-2:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-block.clr-block-3:hover {
-      background: #3C3C3C;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-    }
-
-    .market-update-right i.fa.fa-user-o,
-    i.fa.fa-map-marker {
-      font-size: 3em;
-      color: #68AE00;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-
-    .market-update-right i.fa.fa-info-circle,
-    i.fa.fa-list-alt {
-      font-size: 3em;
-      color: #FC8213;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-
-    .market-update-right i.fa.fa-mobile,
-    i.fa.fa-calendar-o {
-      font-size: 3em;
-      color: #337AB7;
-      width: 80px;
-      height: 80px;
-      background: #fff;
-      text-align: center;
-      border-radius: 49px;
-      -webkit-border-radius: 49px;
-      -moz-border-radius: 49px;
-      -o-border-radius: 49px;
-      line-height: 1.7em;
-    }
-    .market-update-left {
-      padding: 0px;
+    .market-update-left{
+      padding-bottom: 15px;
     }
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -138,45 +31,39 @@
 </head>
 
 <body>
-  <div class="market-updates">
+  <!-- <div class="market-updates"> -->
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-1">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{doctorName}}</h3>
           <h4>Doctor Name</h4>
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-user-o"> </i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-2">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{symptoms}}</h3>
           <h4>Symptoms</h4>
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-info-circle"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-3">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{doctorMobile}}</h3>
           <h4>Doctor Contact</h4>
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-mobile" aria-hidden="true"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="clearfix"> </div>
-  </div>
+  <!-- </div> -->
 
 
 
@@ -184,35 +71,48 @@
 
 
 
-  <div class="market-updates">
+
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-1">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{doctorDepartment}}</h3>
           <h4>Doctor Department</h4>
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-list-alt"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="col-md-4 market-update-gd">
-      <div class="market-update-block clr-block-2">
+      <div class="market-update-block clr-block">
         <div class="col-md-8 market-update-left">
           <h3>{{admitDate}}</h3>
           <h4>Attended On</h4>
         </div>
-        <div class="col-md-4 market-update-right">
-          <i class="fa fa-calendar-o" aria-hidden="true"></i>
-        </div>
+        
         <div class="clearfix"> </div>
       </div>
     </div>
     <div class="clearfix"> </div>
-  </div>
 
-  
+    <!-- <table class="table">
+
+      <tbody class="table-group-divider">
+        <tr>s
+          <td>Doctor Name</td>
+          <td>Doctor Department</td>
+          <td>Doctor Contact</td>
+          <td>Symptoms</td>
+          <td>Attended On</td>
+        </tr>
+        <tr>
+          <td>{{doctorName}}</td>
+          <td>{{doctorDepartment}}</td>
+          <td>{{doctorMobile}}</td>
+          <td>{{symptoms}}</td>
+          <td>{{admitDate}}</td>
+        </tr>
+      </tbody>
+    </table> -->
 
 
 </body>
