--- a/templates/hospital/patient_view_appointment.html
+++ b/templates/hospital/patient_view_appointment.html
@@ -20,11 +20,11 @@
 </head>
 
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel">
     <div class="panel-heading">
       <h6 class="panel-title">Your Appointments</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
+    <table class="table">
       <thead>
         <tr>
           <th>Doctor Name</th>
@@ -39,9 +39,9 @@
         <td>{{a.description}}</td>
         <td>{{a.appointmentDate}}</td>
         {%if a.status%}
-        <td> <span class="label label-primary">Confirmed</span></td>
+        <td> <span class="label label-success">Confirmed</span></td>
         {% else %}
-        <td> <span class="label label-success">Pending</span></td>
+        <td> <span class="label label-warning">Pending</span></td>
         {% endif %}
       </tr>
       {% endfor %}
