--- a/templates/hospital/patientlogin.html
+++ b/templates/hospital/patientlogin.html
@@ -20,7 +20,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: rgb(101, 188, 101);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -39,7 +39,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: rgb(101, 188, 101);
       color: #fff;
     }
   </style>
